--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "added standard version  This has code for installing jenkins on linux machine and creating an AMI",
   "main": "release.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests specified\"",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.0.6",
-    "semantic-release": "^24.0.0"
+    "semantic-release": "^24.0.0",
+    "husky": "^8.0.0"
   }
 }
