--- a/.github/workflows/Conventional-Commits.yaml
+++ b/.github/workflows/Conventional-Commits.yaml
@@ -34,6 +34,4 @@ jobs:
 
       - name: Run Commitlint on the latest commit
         run: |
-          npx husky-init && npm install -y
-          npx --no-install commitlint --edit "$1"
-
+              npx commitlint --from HEAD~1 --to HEAD
