--- a/.github/workflows/Conventional-Commits.yaml
+++ b/.github/workflows/Conventional-Commits.yaml
@@ -34,4 +34,4 @@ jobs:
 
       - name: Run Commitlint on the latest commit
         run: |
-              npx commitlint --from HEAD~1 --to HEAD
+              npx commitlint --edit $(git log -1 --pretty=format:%H)
