--- a/.github/workflows/Conventional-Commits.yaml
+++ b/.github/workflows/Conventional-Commits.yaml
@@ -33,5 +33,4 @@ jobs:
         run: node -v
 
       - name: Run Commitlint on the latest commit
-        run: |
-              npx commitlint --edit $(git log -1 --pretty=format:%H)
+        run: npx commitlint --from HEAD~1 --to HEAD
