--- a/.github/workflows/Conventional-Commits.yaml
+++ b/.github/workflows/Conventional-Commits.yaml
@@ -33,4 +33,5 @@ jobs:
         run: node -v
 
       - name: Run Commitlint on the latest commit
-        run: npx commitlint --from HEAD~1 --to HEAD
+        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
