--- a/.github/workflows/Conventional-Commits.yaml
+++ b/.github/workflows/Conventional-Commits.yaml
@@ -35,5 +35,4 @@ jobs:
       - name: Run Commitlint on the latest commit message
         run: |
           set -e
-          LATEST_COMMIT_MSG=$(git log -1 --pretty=%B)
-          echo "$LATEST_COMMIT_MSG" | npx commitlint
+          git log -1 --pretty=%B | npx commitlint
