--- a/.github/workflows/Conventional-Commits.yaml
+++ b/.github/workflows/Conventional-Commits.yaml
@@ -27,15 +27,10 @@ jobs:
       - name: Install Commitlint
         run: npm install @commitlint/config-conventional @commitlint/cli
 
-      - name: Create Commitlint configuration
-        run: |
-            echo "module.exports = {extends: ['@commitlint/config-conventional']};" > commitlint.config.js
-
       # %B outputs the raw commit message of the most recent commit message
       - name: Run Commitlint on the latest commit message
         run: |
           git log -1 --pretty=%B | npx commitlint 
-          if [ $? -ne 0 ]; then
-            echo "Commit message does not follow conventional commit guidelines."
-            exit 1
-          fi
+        continue-on-error: false
+
+        
