feat: kube listing

--- a/.github/workflows/jenkins-ami.yml
+++ b/.github/workflows/jenkins-ami.yml
@@ -49,4 +49,6 @@ jobs:
         shell: bash
 
       - name: Build AMI
-        run: packer build .
+        run: |
+           ls -al
+           packer build .
