feat: script upgrade

--- a/.github/workflows/jenkins-ami.yml
+++ b/.github/workflows/jenkins-ami.yml
@@ -86,10 +86,10 @@ jobs:
           sed -i "s|jenkins_ami_git_url|${{ secrets.GIT_JENKINS_AMI_REPO_URL }}|g" jenkins/build-docker-image.groovy
           sed -i "s|git_username|${{ secrets.git_username }}|g" jenkins/jenkins.yaml
           sed -i "s|GITHUB_TOKEN|${{ secrets.GIT_TOKEN }}|g" jenkins/jenkins.yaml
-          sed -i "s|your_certificate_authority_data|${{ secrets.YOUR_CERTIFICATE_AUTHORITY_DATA }}|g" K8s_config/config.yaml
-          sed -i "s|aws_api_server|${{ secrets.AWS_API_SERVER }}|g" K8s_config/config.yaml
           sed -i "s|\${AWS_ACCESS_KEY_ID}|${{ secrets.AWS_ACCESS_KEY_ID }}|g" jenkins/jenkins.yaml
           sed -i "s|\${AWS_SECRET_ACCESS_KEY}|${{ secrets.AWS_SECRET_ACCESS_KEY }}|g" jenkins/jenkins.yaml
+          sed -i "s|\${AWS_ACCESS_KEY_ID}|${{ secrets.AWS_ACCESS_KEY_ID }}|g" scripts/install.sh
+          sed -i "s|\${AWS_SECRET_ACCESS_KEY}|${{ secrets.AWS_SECRET_ACCESS_KEY }}|g" scripts/install.sh
         shell: bash
 
       - name: Build AMI
